<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fragment_frame_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_name_label" />

    <EditText
        android:id="@+id/entry_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entry_name_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_description_label" />

    <EditText
        android:id="@+id/entry_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top|left"
        android:hint="@string/entry_description_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_instructions_label" />

    <EditText
        android:id="@+id/entry_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entry_video_hint" />

    <WebView
        android:id="@+id/webview_youtube"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:context=".MainActivity">
        <TextView
            android:id="@+id/entry_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="Data: " />

        <TextView
            android:id="@+id/entry_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="nie podano" />
        </LinearLayout>

        <Button
            android:id="@+id/entry_date_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"


            android:gravity="end"
            android:text="Wybierz datę" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/entry_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_done_label" />
</LinearLayout>