<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fragment_frame_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_name_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_description_label" />

    <TextView
        android:id="@+id/entry_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top|left"/>

    <WebView
        android:id="@+id/webview_youtube"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <CheckBox
        android:id="@+id/entry_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_done_label" />
</LinearLayout>